<resources>
    <string name="app_name">StudioAlldemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refresh_release">松开后加载</string>
    <string name="refresh_pull">上拉加载更多</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_footlading">加载中...</string>
    <string name="refresh_text">松开即刷新</string>
    <string name="refresh_foottext">上拉加载更多</string>
    <string name="title_activity_refresh_list">RefreshListActivity</string>
    <string name="text1">神挡杀神&#160;&#160;&#160;三生三世</string>
    <string name="text2">发送中&#8230;</string>
    <string name="text3">保 存</string>
    <string name="text4">&#160;</string>
    <!-- &nbsp;html中的空格的转义，&#160;是XSL中空格的转义-->
    <string name="text5">我们我们</string>
    <string name="loading">正在加载中......</string>
    <string name="textclick">hhskjkjhejkekmdmdmmd</string>
</resources>
